# frigate-anpr-logger

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  compose.yaml
backend/: main.py  pyproject.toml
backend/providers/: README.md  nl.json
backend/tests/: test_healing.py
frontend/: app.js  index.html  style.css
providers/: README.md  index.json
scripts/: anpr-cli.py  check-sync.py  migrate.py
