[project]
name = "frigate-anpr-logger"
version = "0.1.0"
description = "Self-hosted ANPR logger + dashboard for Frigate over MQTT, with vehicle-registry enrichment (Dutch RDW by default)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.0",
    "paho-mqtt>=2.1.0",
    "uvicorn>=0.49.0",
]
